# ByteRTCLiteHal

./: CMakeLists.txt  README.md
configs/: config_mbedtls.h
inc/: volc_atomic.h  volc_cond.h  volc_crypto.h  volc_device.h  volc_device_finger_print.h  volc_directory.h  volc_errno.h  volc_fileio.h  volc_log.h  volc_memory.h  volc_mutex.h  volc_network.h  volc_socket.h  volc_string.h  volc_thread.h  volc_time.h  volc_tls.h  volc_type.h  volc_uuid.h  volc_zlib.h
src/common/: volc_crypto.c  volc_string.c  volc_tls.c
src/platform/esp32/: volc_atomic.c  volc_cond.c  volc_device.c  volc_device_finger_print.c  volc_errno.c  volc_log.c  volc_memory.c  volc_mutex.c  volc_network.c  volc_socket.c  volc_thread.c  volc_time.c  volc_uuid.c  volc_zlib.c
src/platform/macos/: volc_atomic.c  volc_device.c  volc_device_finger_print.c  volc_errno.c  volc_memory.c  volc_mutex.c  volc_network.c  volc_socket.c  volc_thread.c  volc_time.c  volc_uuid.c  volc_zlib.c
src/platform/x86_64/: volc_cond.c  volc_device.c  volc_device_finger_print.c  volc_directory.c  volc_fileio.c  volc_log.c  volc_memory.c  volc_mutex.c  volc_network.c  volc_socket.c  volc_thread.c  volc_time.c  volc_uuid.c
